--- a/Christian-Louis-Bolea/consoles.css
+++ b/Christian-Louis-Bolea/consoles.css
@@ -2,212 +2,157 @@
 body{
     font-family: 'Play', sans-serif;
     margin: 0;
-    background-color: gray;
+    background: rgb(186, 226, 231);
+    transition: background 0.5s ease;
 }
-
-:root {
-    --item1-transform: translate(-100%, -5%) scale(1.5);
+:root{
+    --item1-transform: translateX(-100%) translateY(-5%) scale(1.5);
     --item1-filter: blur(30px);
-    --item1-zindex: 11;
+    --item1-zIndex: 11;
     --item1-opacity: 0;
 
-    --item2-transform: translate(0,0);
-    --item2-filter: blur(30px);
-    --item2-zindex: 10;
+    --item2-transform: translateX(0);
+    --item2-filter: blur(0px);
+    --item2-zIndex: 10;
     --item2-opacity: 1;
 
-    --item3-transform: translate(50%, 10%) scale(0.8);
+    --item3-transform: translate(50%,10%) scale(0.8);
     --item3-filter: blur(10px);
-    --item3-zindex: 9;
+    --item3-zIndex: 9;
     --item3-opacity: 1;
 
-    --item4-transform: translate(90%, 20%) scale(0.5);
+    --item4-transform: translate(90%,20%) scale(0.5);
     --item4-filter: blur(30px);
-    --item4-zindex: 8;
+    --item4-zIndex: 8;
     --item4-opacity: 1;
-
-    --item5-transform: translate(120%, 30%) scale(0.3);
+    
+    --item5-transform: translate(120%,30%) scale(0.3);
     --item5-filter: blur(40px);
-    --item5-zindex: 7;
+    --item5-zIndex: 7;
     --item5-opacity: 0;
 }
-header {
-    font-family: 'Play', sans-serif;
+header{
     width: 1140px;
     max-width: 90%;
-    margin: auto;
-    height: 50px;
     display: flex;
     justify-content: space-between;
+    margin: auto;
+    height: 50px;
     align-items: center;
-
 }
-
 header .logo{
     font-weight: bold;
+    color: WHITE;
 }
 header nav a{
     margin-left: 30px;
     text-decoration: none;
     color: #555;
     font-weight: 500;
+    transition: color 0.5s ease;
 }
-
-.carousel {
-    height: 800px;
-    margin-top: -50px;
-    overflow: hidden;
+.carousel{
     position: relative;
-
+    height: 800px;
+    overflow: hidden;
+    margin-top: -50px;
 }
-
-.carousel .list {
-    position:absolute;
-    top:0;
-    left:0;
+.carousel .list{
+    position: absolute;
     width: 1140px;
     max-width: 90%;
-    left: 50%;
-    transform:translateX(-50%);
     height: 80%;
+    left: 50%;
+    transform: translateX(-50%);
 }
-
-.carousel .list .item {
+.carousel .list .item{
+    position: absolute;
+    left: 0%;
     width: 70%;
     height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    opacity: 0;
     font-size: 15px;
+    transition: left 0.5s, opacity 0.5s, width 0.5s;
 }
-
-.carousel .list .item img {
+.carousel .list .item:nth-child(n + 6){
+    opacity: 0;
+}
+.carousel .list .item:nth-child(2){
+    z-index: 10;
+    transform: translateX(0);
+}
+.carousel .list .item img{
     width: 50%;
     position: absolute;
     right: 0;
     top: 50%;
     transform: translateY(-50%);
+    transition: right 1.5s;
 }
-.carousel .list .item.detail {
-     opacity: 0;
-     pointer-events: none;
-
-}   
-
-.carousel .list .item.intro {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 400px;
+.carousel .list .item .introduce{
     opacity: 0;
     pointer-events: none;
-
 }
-
-.carousel .list .item:nth-child(2) .intro {
+.carousel .list .item:nth-child(2) .introduce{
     opacity: 1;
     pointer-events: auto;
+    width: 400px;
+    position: absolute;
+    top: 50%;
+    transform:  translateY(-50%);
     transition: opacity 0.5s;
 }
-
-.carousel .list .item:nth-child(n +6) .intro {
-    opacity: 0;
-    pointer-events: none;
+.carousel .list .item .introduce .title{
+    font-size: 2em;
+    font-weight: 500;
+    line-height: 1em;
+    transition: color 0.5s ease;
 }
-
-.carousel .list .item:nth-child(1) {
+.carousel .list .item .introduce .topic{
+    font-size: 4em;
+    font-weight: 500;
+    transition: color 0.5s ease;
+}
+.carousel .list .item .introduce .des{
+    font-size: small;
+    color: #5559;
+    transition: color 0.5s ease;
+}
+.carousel .list .item .introduce .seeMore{
+    font-family: Poppins;
+    margin-top: 1.2em;
+    padding: 5px 0;
+    border: none;
+    border-bottom: 1px solid #555;
+    background-color: transparent;
+    font-weight: bold;
+    letter-spacing: 3px;
+    transition: background 0.5s, color 0.5s ease, border-color 0.5s ease;
+}
+.carousel .list .item .introduce .seeMore:hover{
+    background: #eee;
+}
+.carousel .list .item:nth-child(1){
     transform: var(--item1-transform);
     filter: var(--item1-filter);
-    z-index:var(--item1-zindex);
+    z-index: var(--item1-zIndex);
     opacity: var(--item1-opacity);
     pointer-events: none;
 }
-
-.carousel .list .item:nth-child(2) {
-    transform: var(--item2-transform);
-    filter: var(--item2-filter);
-    z-index: var(--item2-zindex);
-    opacity: var(--item2-opacity);
-}
-
-.carousel .list .item:nth-child(3) {
+.carousel .list .item:nth-child(3){
     transform: var(--item3-transform);
     filter: var(--item3-filter);
-    z-index: var(--item3-zindex);
-    opacity: var(--item3-opacity);
+    z-index: var(--item3-zIndex);
 }
-
-.carousel .list .item:nth-child(4) {
+.carousel .list .item:nth-child(4){
     transform: var(--item4-transform);
     filter: var(--item4-filter);
-    z-index: var(--item4-zindex);
-    opacity: var(--item4-opacity);
+    z-index: var(--item4-zIndex);
 }
-
-.carousel .list .item:nth-child(5) {
+.carousel .list .item:nth-child(5){
     transform: var(--item5-transform);
     filter: var(--item5-filter);
-    z-index: var(--item5-zindex);
     opacity: var(--item5-opacity);
     pointer-events: none;
-}
-
-.arrows {
-    position: absolute;
-    bottom: 10px;
-    width: 1140px;
-    max-width: 90%;
-    left: 50%;
-    transform: translateX(-50%);
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-}
-
-.arrows #next, .arrows #prev {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    font-family: monospace;
-    font-size: large;
-    font-weight: bold;
-    border: 1px solid black;
-}
-
-.arrows #back{
-    font-family: play, sans-serif;
-    font-weight: 500;
-    border: none;
-    border-bottom: 1px solid black;
-    letter-spacing: 3px;
-    background-color: transparent;
-    opacity: 0;
-    pointer-events: none;
-}
-
-.carousel .list .item .intro .title{
-    font-size: 2em;
-    line-height: 0.8em ;
-}
-
-.carousel .list .item .intro .topic{
-    font-size: 4em;
-    font-weight: 500;
-}
-
-.carousel .list .item .intro .des{
-    font-size: small;
-}
-.carousel .list .item .intro .seeMore{
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid black;
-    font-family: play, sans-serif;
-    font-weight: bold;
-    margin-top: 1.2em;
-    padding: 5px 0;
 }
 .carousel .list .item:nth-child(2) .introduce .title,
 .carousel .list .item:nth-child(2) .introduce .topic,
@@ -216,7 +161,6 @@ header nav a{
     opacity: 0;
     animation: showContent 0.5s 1s ease-in-out 1 forwards;
 }
-
 @keyframes showContent{
     from{
         transform: translateY(-30px);
@@ -228,11 +172,333 @@ header nav a{
     }
 }
 .carousel .list .item:nth-child(2) .introduce .topic{
-    animation-delay: 0.9s;
+    animation-delay: 1.2s;
 }
 .carousel .list .item:nth-child(2) .introduce .des{
-    animation-delay: 1.1s;
+    animation-delay: 1.4s;
 }
 .carousel .list .item:nth-child(2) .introduce .seeMore{
-    animation-delay: 1.3s;
+    animation-delay: 1.6s;
+}
+.carousel.next .item:nth-child(1){
+    animation: transformFromPosition2 0.5s ease-in-out 1 forwards;
+}
+@keyframes transformFromPosition2{
+    from{
+        transform: var(--item2-transform);
+        filter: var(--item2-filter);
+        opacity: var(--item2-opacity);
+    }
+}
+.carousel.next .item:nth-child(2){
+    animation: transformFromPosition3 0.7s ease-in-out 1 forwards;
+}
+@keyframes transformFromPosition3{
+    from{
+        transform: var(--item3-transform);
+        filter: var(--item3-filter);
+        opacity: var(--item3-opacity);
+    }
+}
+.carousel.next .item:nth-child(3){
+    animation: transformFromPosition4 0.9s ease-in-out 1 forwards;
+}
+@keyframes transformFromPosition4{
+    from{
+        transform: var(--item4-transform);
+        filter: var(--item4-filter);
+        opacity: var(--item4-opacity);
+    }
+}
+.carousel.next .item:nth-child(4){
+    animation: transformFromPosition5 1.1s ease-in-out 1 forwards;
+}
+@keyframes transformFromPosition5{
+    from{
+        transform: var(--item5-transform);
+        filter: var(--item5-filter);
+        opacity: var(--item5-opacity);
+    }
+}
+.carousel.prev .list .item:nth-child(5){
+    animation: transformFromPosition4 0.5s ease-in-out 1 forwards;
+}
+.carousel.prev .list .item:nth-child(4){
+    animation: transformFromPosition3 0.7s ease-in-out 1 forwards;
+}
+.carousel.prev .list .item:nth-child(3){
+    animation: transformFromPosition2 0.9s ease-in-out 1 forwards;
+}
+.carousel.prev .list .item:nth-child(2){
+    animation: transformFromPosition1 1.1s ease-in-out 1 forwards;
+}
+@keyframes transformFromPosition1{
+    from{
+        transform: var(--item1-transform);
+        filter: var(--item1-filter);
+        opacity: var(--item1-opacity);        
+    }
+}
+.carousel .list .item .detail{
+    opacity: 0;
+    pointer-events: none;
+}
+.carousel.showDetail .list .item:nth-child(3),
+.carousel.showDetail .list .item:nth-child(4){
+    left: 100%;
+    opacity: 0;
+    pointer-events: none;
+}
+.carousel.showDetail .list .item:nth-child(2){
+    width: 100%;
+}
+.carousel.showDetail .list .item:nth-child(2) .introduce{
+    opacity: 0;
+    pointer-events: none;
+}
+.carousel.showDetail .list .item:nth-child(2) img{
+    right: 50%;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail{
+    opacity: 1;
+    width: 50%;
+    position: absolute;
+    right: 0;
+    top: 50%;
+    transform: translateY(-50%);
+    text-align: right;
+    pointer-events: auto;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail .title{
+    font-size: 4em;
+    transition: color 0.5s ease;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail .des { 
+    transition: color 0.5s ease;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail .specifications{
+    display: flex;
+    gap: 10px;
+    width: 100%;
+    border-top: 1px solid #5553;
+    margin-top: 20px;
+    transition: border-color 0.5s ease;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail .specifications p { 
+    transition: color 0.5s ease;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail .specifications div{
+    width: 90px;
+    text-align: center;
+    flex-shrink: 0;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail .specifications div p:nth-child(1){
+    font-weight: bold;
+}
+.carousel.carousel.showDetail .list .item:nth-child(2) .checkout button{
+    font-family: Poppins;
+    background-color: transparent;
+    border: 1px solid #5555;
+    margin-left: 5px;
+    padding: 5px 10px;
+    letter-spacing: 2px;
+    font-weight: 500;
+    transition: color 0.5s ease, border-color 0.5s ease;
+}
+.carousel.carousel.showDetail .list .item:nth-child(2) .checkout button:nth-child(2){
+    background-color: #693EFF;
+    color: #eee;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail  .title,
+.carousel.showDetail .list .item:nth-child(2) .detail  .des,
+.carousel.showDetail .list .item:nth-child(2) .detail .specifications,
+.carousel.showDetail .list .item:nth-child(2) .detail .checkout{
+    opacity: 0;
+    animation: showContent 0.5s 1s ease-in-out 1 forwards;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail  .des{
+    animation-delay: 1.2s;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail .specifications{
+    animation-delay: 1.4s;
+}
+.carousel.showDetail .list .item:nth-child(2) .detail .checkout{
+    animation-delay: 1.6s;
+}
+.arrows{
+    position: absolute;
+    bottom: 10px;
+    width: 1140px;
+    max-width: 90%;
+    display: flex;
+    justify-content: space-between;
+    left: 50%;
+    transform: translateX(-50%);
+}
+#prev,
+#next{
+    width: 150px;
+    height: 60px;
+    border-radius: 50px;
+    background-image: linear-gradient(135deg, #ffffff 0%, #ffffff 100%);
+    box-shadow: 0 20px 30px -6px rgba(0, 58, 250, 0.5);
+    outline:none;
+    cursor: pointer;
+    border: none;
+    font-size: 24px;
+    color: rgb(0, 0, 0);
+    font-family: play, sans-serif;
+    transition: all 0.3s ease-in-out;
+    bottom: 20%;
+    left: 10%;
+}
+
+#back{
+    width: 150px;
+    height: 60px;
+    border-radius: 50px;
+    background-image: linear-gradient(135deg, #ffffff 0%, #ffffff 100%);
+    box-shadow: 0 20px 30px -6px rgba(0, 58, 250, 0.5);
+    outline:none;
+    cursor: pointer;
+    border: none;
+    font-size: 24px;
+    color: rgb(0, 0, 0);
+    font-family: play, sans-serif;
+    transition: all 0.3s ease-in-out;
+    position: absolute;
+    z-index: 100;
+    bottom: 0%;
+    left: 50%;
+    transform: translateX(-50%);
+    background-color: unset;
+    padding: 0;
+    font-weight: normal;
+    letter-spacing: normal;
+}
+
+#prev:hover,
+#next:hover{
+    transform: translateY(3px);
+    box-shadow: none;
+
+}
+
+#back:hover {
+    transform: translateX(-50%) translateY(3px);
+    box-shadow: none;
+}
+
+#prev:active,
+#next:active,
+#back:active{
+    opacity: 0.5;
+}
+
+.carousel.showDetail #back{
+    opacity: 1;
+}
+.carousel.showDetail #prev,
+.carousel.showDetail #next{
+    opacity: 0;
+    pointer-events: none;
+}
+.carousel::before{
+    width: 500px;
+    height: 300px;
+    content: '';
+    background: var(--carousel-glow, linear-gradient(70deg, #06010f, blue, WHITE));
+    position: absolute;
+    z-index: -1;
+    border-radius: 20% 30% 80% 10%;
+    filter: blur(150px);
+    top: 50%;
+    left: 50%;
+    transform: translate(-10%, -50%);
+    transition: 1s;
+}
+.carousel.showDetail::before{
+    transform: translate(-100%, -50%) rotate(90deg);
+    filter: blur(130px);
+}
+@media screen and (max-width: 991px){
+    .carousel .list .item{
+        width: 90%;
+    }
+    .carousel.showDetail .list .item:nth-child(2) .detail .specifications{
+        overflow: auto;
+    }
+    .carousel.showDetail .list .item:nth-child(2) .detail .title{
+        font-size: 2em;
+    }
+}
+@media screen and (max-width: 767px){
+    .carousel{
+        height: 600px;
+    }
+    .carousel .list .item{
+        width: 100%;
+        font-size: 10px;
+    }
+    .carousel .list{
+        height: 100%;
+    }
+    .carousel .list .item:nth-child(2) .introduce{
+        width: 50%;
+    }
+    .carousel .list .item img{
+        width: 40%;
+    }
+    .carousel.showDetail .list .item:nth-child(2) .detail{
+        backdrop-filter: blur(10px);
+        font-size: small;
+    }
+    .carousel .list .item:nth-child(2) .introduce .des,
+    .carousel.showDetail .list .item:nth-child(2) .detail .des{
+        height: 100px;
+        overflow: auto;
+    }
+    .carousel.showDetail .list .item:nth-child(2) .detail .checkout{
+        display: flex;
+        width: max-content;
+        float: right;
+    }
+}
+body.dark-theme header nav a {
+    color: #f0f0f0;
+}
+body.dark-theme .carousel .list .item .introduce .title,
+body.dark-theme .carousel .list .item .introduce .topic {
+    color: #ffffff;
+}
+body.dark-theme .carousel .list .item .introduce .des {
+    color: rgba(240, 240, 240, 0.7);
+}
+body.dark-theme .carousel .list .item .introduce .seeMore {
+    color: #f0f0f0;
+    border-bottom-color: #f0f0f0;
+}
+body.dark-theme .carousel .list .item .introduce .seeMore:hover {
+    background: #333;
+}
+body.dark-theme .carousel.showDetail .list .item:nth-child(2) .detail .title,
+body.dark-theme .carousel.showDetail .list .item:nth-child(2) .detail .des,
+body.dark-theme .carousel.showDetail .list .item:nth-child(2) .detail .specifications p {
+    color: #f0f0f0;
+}
+body.dark-theme .carousel.showDetail .list .item:nth-child(2) .detail .specifications {
+    border-top-color: rgba(240, 240, 240, 0.3);
+}
+body.dark-theme .carousel.carousel.showDetail .list .item:nth-child(2) .checkout button {
+    color: #f0f0f0;
+    border-color: rgba(240, 240, 240, 0.3);
+}
+body.dark-theme #prev,
+body.dark-theme #next {
+    color: #020202;
+    border-color: rgba(240, 240, 240, 0.3);
+}
+body.dark-theme #back {
+    color: #f0f0f0;
+    border-bottom-color: #f0f0f0;
 }
